apps/media/prowlarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-prowlarr/
#

apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: prowlarr
  type: ClusterIP
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: prowlarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: prowlarr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:2.6.5 # {"$imagepolicy": "media:prowlarr"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 1500m
              memory: 750Mi
          volumeMounts:
            - name: prowlarr-pvc
              mountPath: /config
      volumes:
        - name: prowlarr-pvc
          persistentVolumeClaim:
            claimName: prowlarr-pvc
