apps/media/prowlarr/exporter.yaml
#
# Reference:
# https://github.com/onedr0p/exportarr
#

apiVersion: v1
kind: Service
metadata:
  name: prowlarr-exportarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: prowlarr-exportarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: prowlarr-exportarr
  type: ClusterIP
  ports:
    - name: metrics
      port: 9707
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-exportarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: prowlarr-exportarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: prowlarr-exportarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: prowlarr-exportarr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: prowlarr-exportarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0 # {"$imagepolicy": "media:exportarr"}
          imagePullPolicy: Always
          args:
            - prowlarr
          ports:
            - name: metrics
              containerPort: 9707
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: metrics
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: metrics
            failureThreshold: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
